@@ -30,7 +30,7 @@ if [[ "${cygwin}" = true ]]; then
 fi
 
 # Constants.
-serverTimeoutSeconds=120
+serverTimeoutSeconds=${SERVER_START_TIMEOUT:-120}
 dbUsername=""
 dbPassword=""
 
@@ -39,7 +39,7 @@ scriptDirectory="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
 # Use GNU getopt to parse the options passed to this script.
 TEMP=`getopt \
-	j:m:v:t:u:e: \
+	j:m:v:t:u:e:p:o:s: \
 	$*`
 if [ $? != 0 ] ; then echo "Terminating." >&2 ; exit 1 ; fi
 
@@ -53,6 +53,9 @@ visualVm=""
 targetDirectory=
 dbUrl="jdbc:bfd-test:hsqldb:mem"
 v2Enabled="true"
+pacEnabled="true"
+pacOldMbiHashEnabled="false"
+pacClaimSourceTypes="fiss,mcs"
 while true; do
 	case "$1" in
 		-j )
@@ -67,6 +70,12 @@ while true; do
 			dbUrl="$2"; shift 2 ;;
 		-e )
 			v2Enabled="$2"; shift 2 ;;
+		-p )
+			pacEnabled="$2"; shift 2 ;;
+		-o )
+			pacOldMbiHashEnabled="$2"; shift 2 ;;
+		-s )
+			pacClaimSourceTypes="$2"; shift 2 ;;
 		-- ) shift; break ;;
 		* ) break ;;
 	esac
@@ -118,9 +127,10 @@ cd "${targetDirectory}/.."
 
 # Define all of the derived paths we'll need.
 workDirectory="${targetDirectory}/server-work"
-serverLauncher="${workDirectory}/$(ls ${workDirectory} | grep '^bfd-server-launcher-.*\.jar$')"
+serverLauncher=$(echo ${workDirectory}/bfd-server-launcher-*/bfd-server-launcher.sh)
 serverPortsFile="${workDirectory}/server-ports.properties"
 serverLog="${workDirectory}/server-console.log"
+gcLog="${workDirectory}/gc.log"
 warArtifact="${targetDirectory}/$(ls ${targetDirectory} | grep '^bfd-server-war-.*\.war$')"
 keyStore="${scriptDirectory}/../../../../dev/ssl-stores/server-keystore.jks"
 trustStore="${scriptDirectory}/../../../../dev/ssl-stores/server-truststore.jks"
@@ -138,8 +148,14 @@ if [[ "${cygwin}" = true ]]; then warArtifact=$(cygpath --windows "${warArtifact
 if [[ "${cygwin}" = true ]]; then keyStore=$(cygpath --mixed "${keyStore}"); fi
 if [[ "${cygwin}" = true ]]; then trustStore=$(cygpath --mixed "${trustStore}"); fi
 
-# Read the server port to be used from the ports file.
-serverPortHttps=${BFD_PORT:-$(grep "^server.port.https=" "${serverPortsFile}" | tr -d '\r' | cut -d'=' -f2)}
+# If we are running in Jenkins, don't allow BFD_PORT to override port generated from file
+# due to bizzare namespace collision: https://github.com/CMSgov/beneficiary-fhir-data/pull/740#discussion_r694276000
+if [[ ! -z "${JENKINS_HOME}" ]] && [[ ! -z "${JENKINS_URL}" ]]; then
+	serverPortHttps=$(grep "^server.port.https=" "${serverPortsFile}" | tr -d '\r' | cut -d'=' -f2)
+else
+	serverPortHttps=${BFD_PORT:-$(grep "^server.port.https=" "${serverPortsFile}" | tr -d '\r' | cut -d'=' -f2)}
+fi
+
 if [[ -z "${serverPortHttps}" ]]; then >&2 echo "Server HTTPS port not specified in '${serverPortsFile}'."; exit 1; fi
 echo "Configured server to run on HTTPS port '${serverPortHttps}'."
 
@@ -160,20 +176,34 @@ else
 	visualVmArgs=""
 fi
 
+# For testing purposes, we start the server with the property that causes a fake drug code to be available which
+# makes the ITs more stable.
+includeFakeDrugCode="true"
+includeFakeOrgName="true"
+
+# To enable JVM debugging, uncomment and add this line to the server start command below.
+#	"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8083" \
+
 # Launch the server in the background.
 BFD_PORT="${serverPortHttps}" \
 	BFD_KEYSTORE="${keyStore}" \
 	BFD_TRUSTSTORE="${trustStore}" \
 	BFD_WAR="${warArtifact}" \
-	"${javaHome}/bin/java" \
+	BFD_JAVA_HOME="${javaHome}" \
+	"${serverLauncher}" \
 	"${maxHeapArg}" \
+	"-Xlog:gc*:${gcLog}:time,level,tags" \
 	"-Dbfd-server-${bfdServerId}" \
 	"-DbfdServer.db.url=${dbUrl}" \
 	"-DbfdServer.v2.enabled=${v2Enabled}" \
+	"-DbfdServer.pac.enabled=${pacEnabled}" \
+	"-DbfdServer.pac.oldMbiHash.enabled=${pacOldMbiHashEnabled}" \
+	"-DbfdServer.pac.claimSourceTypes=${pacClaimSourceTypes}" \
 	"-DbfdServer.db.username=" \
 	"-DbfdServer.db.password=" \
 	"-DbfdServer.db.schema.apply=true" \
-	-jar "${serverLauncher}" \
+	"-DbfdServer.include.fake.drug.code=${includeFakeDrugCode}" \
+	"-DbfdServer.include.fake.org.name=${includeFakeOrgName}" \
 	>"${serverLog}" 2>&1 \
 	&
 
